# strava-coach

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
coach/: __init__.py  auth.py  cli.py  coach.py  config.py  db.py  formatters.py  sync.py  tools.py
