[project]
name = "strava-coach"
version = "0.1.0"
description = "Personal AI running coach powered by Strava + Claude"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "SQLAlchemy>=2.0.0",
    "python-dateutil>=2.9.0",
]

[project.scripts]
coach = "coach.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["coach"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
